deploy/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: diploma-app
  namespace: default
  labels:
    app.kubernetes.io/name: diploma-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: diploma-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app.kubernetes.io/name: diploma-app
    spec:
      containers:
        - name: diploma-app
          image: cr.yandex/crpvgs42tbh16im42p7a/diploma-app:v1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: http
          readinessProbe:
            httpGet:
              path: /healthz
              port: 80
            initialDelaySeconds: 2
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 200m
              memory: 128Mi
      imagePullSecrets:
        - name: yc-registry
