deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: diploma-app
  namespace: default
  labels:
    app.kubernetes.io/name: diploma-app
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: diploma-app
  ports:
    - name: http
      port: 80
      targetPort: 80
