deploy/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: diploma-app
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "8m"
spec:
  ingressClassName: nginx
  rules:
    - host: app.89.169.146.16.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: diploma-app
                port:
                  number: 80
